# mylm

./: .build_hash  .gitattributes  .gitignore  ARCHITECTURE.md  ARCHITECTURE_EXPLANATION.md  CHANGELOG.md  COGNITIVE_KERNEL.md  CONTEXT_FIX_SUMMARY.md  CONTEXT_ISSUE_ANALYSIS.md  CONTEXT_MANAGEMENT_FIX.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  INCOMPATIBILITIES.md  MAP.md  PLAN.md  README.md  SMART_PRUNING_COMPLETE.md  SMART_PRUNING_IMPLEMENTATION.md  TODO.md  WINDOWS_INSTALL_STRATEGY.md  analysis.md  architecture.md  build.rs  dev-install.sh  gitsh  gitsh.pub  install-binary.ps1  install-windows.cmd  install.ps1  install.sh  onboard.md  sessions.json  test_delegate_background.sh  timestamp.txt  user_testing_review.md  worker1_output.txt  worker2_output.txt
core/: ARCHITECTURE_MAP.md  Cargo.toml  mylm.toml  myscript.sh
core/examples/: tauri_bridge.rs  tauri_bridge.rs.md
core/src/: error.rs  factory.rs  lib.rs  protocol.rs  rate_limiter.rs  util.rs
core/src/agent/: AGENTS.md  README.md  builder.rs  commonbox.rs  context.rs  core.rs  event.rs  event_bus.rs  example_integration.rs  execution.rs  factory.rs  identity.rs  integration_tests.rs  logger.rs  mod.rs  permissions.rs  prompt.rs  protocol.rs  role.rs  test_architecture.rs  tool.rs  tool_registry.rs  wait.rs  worker.rs  workspace.rs  wrapper.rs
core/src/agent/cognition/: AGENTS.md  MOD.md  decision.rs  engine.rs  error.rs  history.rs  input.rs  kernel.rs  kernel_adapter.rs  llm_engine.rs  mod.rs  planner.rs  state.rs
core/src/agent/cognition/parser/: short_key.rs
core/src/agent/cognition/policy/: approval.rs  mod.rs
core/src/agent/cognition/prompts/: mod.rs  system.rs
core/src/agent/cognition/step/: llm_engine.rs  mod.rs
core/src/agent/cognition/unused/: legacy_planner.rs  mod.rs
core/src/agent/contract/: config.rs  envelope.rs  events.rs  graph.rs  ids.rs  intents.rs  kernel.rs  mod.rs  observations.rs  runtime.rs  session.rs  transport.rs
core/src/agent/governance/: mod.rs  stall_scheduler.rs
core/src/agent/memory/: AGENTS.md  context.rs  extraction.rs  manager.rs  mod.rs
core/src/agent/runtime/: AGENTS.md  MOD.md  approval.rs  capability.rs  context.rs  contract_runtime.rs  error.rs  graph.rs  llm.rs  mod.rs  runtime.rs  terminal.rs  tools.rs  workers.rs
core/src/agent/runtime/capabilities/: approval.rs  llm.rs  local.rs  memory.rs  mod.rs  retry.rs  telemetry.rs  transport.rs  worker.rs
core/src/agent/runtime/core/: capability.rs  context.rs  error.rs  mod.rs  terminal.rs
core/src/agent/runtime/executor/: graph.rs  mod.rs  runtime.rs
core/src/agent/runtime/governance/: authority.rs  claim_enforcer.rs  enforcer.rs  mod.rs  worker_stall.rs
core/src/agent/runtime/impls/: MOD.md  console_telemetry.rs  dag_executor.rs  in_memory_transport.rs  llm_client.rs  local.rs  local_worker.rs  memory.rs  mod.rs  retry.rs  simple_tool.rs  terminal_approval.rs  tool_registry.rs  vector_store.rs  web_search.rs
core/src/agent/runtime/orchestrator/: contract_bridge.rs  dag_executor.rs  mod.rs  orchestrator.rs
core/src/agent/runtime/orchestrator/commonbox/: agent.rs  coordination.rs  error.rs  event.rs  id.rs  job.rs  mod.rs  state.rs
core/src/agent/runtime/orchestrator/transport/: mod.rs  (+3 more)
core/src/agent/runtime/session/: contract_bridge.rs  mod.rs  session.rs  transport.rs
core/src/agent/runtime/stubs/: mod.rs
core/src/agent/runtime/tools/: fs.rs  git.rs  list_files.rs  memory.rs  mod.rs  restricted.rs  scratchpad.rs  shell.rs  web_search.rs  worker_shell.rs
core/src/agent/session/: AGENTS.md  MOD.md  mod.rs  persistence.rs  session.rs
core/src/agent/session/input/: chat.rs  mod.rs  task.rs  worker.rs
core/src/agent/tests/: AGENTS.md  example_integration.rs  integration_tests.rs  read_file_e2e.rs  test_architecture.rs  worker_tests.rs
core/src/agent/tools/: AGENTS.md  commonboard.rs  consolidate.rs  crawl.rs  delegate.rs  document_workers.rs  edit_csv.rs  find.rs  fs.rs  git.rs  jobs.rs  list_files.rs  memory.rs  mod.rs  notes.rs  restricted.rs  scratchpad.rs  search_files.rs  shell.rs  shell_utils.rs  state.rs  system.rs  terminal_sight.rs  wait.rs  web_search.rs  worker_shell.rs  write_file.rs
core/src/agent/tools/delegate/: creator.rs  filter.rs  mod.rs  permissions.rs  prompt.rs  runner.rs  types.rs
core/src/agent/tools/read_file/: chunker.rs  csv.rs  docx.rs  mod.rs  old_pool.rs  pdf.rs  pool.rs  search.rs  types.rs
core/src/agent/types/: AGENTS.md  MOD.md  common.rs  config.rs  envelope.rs  error.rs  events.rs  graph.rs  ids.rs  intents.rs  mod.rs  observations.rs
core/src/agent/types/parser/: mod.rs  short_key.rs
core/src/agent/v1/: core.rs
core/src/agent/v2/: core.rs  execution.rs  jobs.rs  lifecycle.rs  memory.rs  mod.rs  prompt.rs  recovery.rs
core/src/agent/v2/driver/: event_driven.rs  factory.rs  legacy.rs  mod.rs
core/src/agent/v2/orchestrator/: event_bus.rs  helpers.rs  loops.rs  mod.rs  types.rs
core/src/agent/v2/protocol/: mod.rs  parser.rs
core/src/config/: agent.rs  app.rs  base.rs  bridge.rs  endpoints.rs  legacy.rs  llm.rs  manager.rs  mod.rs  profile.rs  prompt.rs  provider.rs  store.rs  tests.rs  types.rs  unified.rs  v2.rs
core/src/config/prompt/: loader.rs  mod.rs  renderer.rs
core/src/config/v2/: config.rs  mod.rs  prompt_schema.rs  prompts.rs  tests.rs  types.rs
core/src/context/: git.rs  manager.rs  mod.rs  pack.rs  system.rs  terminal.rs
core/src/conversation/: context_compression.rs  manager.rs  mod.rs  pruning.rs
core/src/environment/: mod.rs  pack.rs  system.rs  terminal.rs
core/src/executor/: allowlist.rs  mod.rs  safety.rs
core/src/llm/: chat.rs  client.rs  mod.rs
core/src/memory/: categorizer.rs  graph.rs  journal.rs  mod.rs  scribe.rs  store.rs  store.rs.backup
core/src/output/: mod.rs
core/src/pacore/: client.rs  error.rs  exp.rs  mod.rs  model.rs  template.rs  utils.rs
core/src/provider/: chat.rs  client.rs  mod.rs
core/src/scheduler/: daemon.rs  mod.rs  model.rs  store.rs
core/src/state/: mod.rs
core/src/terminal/: app.rs
core/src/ui/: action_stamp.rs  mod.rs
core/src/update/: git.rs  mod.rs
(+266 files in other folders)
