[package]
name = "mylm"
version = "0.1.0"
edition = "2021"
description = "A globally available, high-performance terminal AI assistant"
authors = ["Your Name <you@example.com>"]

[dependencies]
# CLI Framework
clap = { version = "4.4", features = ["derive"] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# System Information
sysinfo = "0.30"

# Configuration Management
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# JSON Handling
serde_json = "1.0"

# Async Streams
futures-util = "0.3"

# Command Execution
shell-words = "1.0"

# Terminal Output
ansi_term = "0.12"
console = "0.15"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Utility
dirs = "5.0"
home = "=0.5.11"
chrono = { version = "0.4", features = ["std"] }

[dev-dependencies]
tempfile = "^3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
# Enable for local/development debugging
debug-endpoint = []
