[package]
name = "mylm"
version = "0.1.0"
edition = "2021"
description = "A globally available, high-performance terminal AI assistant"
authors = ["Your Name <you@example.com>"]

[dependencies]
# CLI Framework
clap = { version = "4.5", features = ["derive"] }

# Async Runtime
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "signal", "fs", "process"] }
async-trait = "0.1"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# System Information
sysinfo = "0.30"

# Configuration Management
config = "0.14"
lancedb = "0.23"
fastembed = "5.7"
lance-arrow = "1.0"
arrow-array = "56.2"
arrow-schema = "56.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# JSON Handling
serde_json = "1.0"
regex = "1.10"
urlencoding = "2.1"

# Async Streams
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"

# Command Execution
shell-words = "1.1"

# Terminal Output
ansi_term = "0.12"
console = "0.15"
dialoguer = "0.11"
inquire = "0.7"
ratatui = "0.28.1"
tui-term = "0.1.13"
vt100 = "0.15"
portable-pty = "0.8.1"
crossterm = "0.28.1"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Utility
dirs = "5.0"
home = "0.5"
chrono = { version = "0.4", features = ["std", "serde"] }
hostname = "0.4"

[dev-dependencies]
tempfile = "3.10"

[profile.dev]
# Use less debug info for faster linking
debug = "line-tables-only"
# Split debug info is faster on Linux
split-debuginfo = "unpacked"
# Minimal optimization for faster compilation
opt-level = 0

[profile.dev-opt]
# New: Fast compile + decent runtime speed
inherits = "dev"
opt-level = 2
lto = false

# Optimize only heavy dependencies that need it
[profile.dev.package."lancedb"]
opt-level = 3
debug = false

[profile.dev.package."fastembed"]
opt-level = 3
debug = false

[profile.dev.package."arrow-array"]
opt-level = 3
debug = false

[profile.dev.package."arrow-schema"]
opt-level = 3
debug = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[build-dependencies]
sha2 = "0.10"
hex = "0.4"

[features]
# Enable for local/development debugging
debug-endpoint = []
