[package]
name = "mylm"
version = "0.2.0"
edition = "2021"
description = "A globally available, high-performance terminal AI assistant"
authors = ["Edward <ediblackk@users.noreply.github.com>"]
repository = "https://github.com/ediblackk/mylm"
homepage = "https://github.com/ediblackk/mylm"
documentation = "https://github.com/ediblackk/mylm"
keywords = ["terminal", "ai", "llm", "productivity", "tool"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
readme = "README.md"

[workspace]
members = ["core"]

[dependencies]
mylm-core = { path = "./core" }

# CLI Framework
clap = { version = "4.5", features = ["derive"] }

# Async Runtime
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "signal", "fs", "process"] }
async-trait = "0.1"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls-native-roots"], default-features = false }

# System Information
sysinfo = "0.30"

# Configuration Management
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"

# JSON Handling
serde_json = "1.0"
regex = "1.10"
urlencoding = "2.1"

# Async Streams
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"

# Command Execution
shell-words = "1.1"

# Terminal Output
console = "0.15"
dialoguer = "0.11"
inquire = "0.7"
ratatui = "0.28.1"
tui-term = "0.1.13"
vt100 = "0.15"
portable-pty = "0.8.1"
crossterm = "0.28.1"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Utility
dirs = "5.0"
home = "0.5"
chrono = { version = "0.4", features = ["std", "serde"] }
base64 = "0.22"
uuid = { version = "1.0", features = ["v4", "serde"] }

# WebSocket Server
tokio-tungstenite = "0.21"

# Clipboard
arboard = "3.4"

[dev-dependencies]

[profile.dev]
# Use less debug info for faster linking
debug = "line-tables-only"
# Split debug info is faster on Linux
split-debuginfo = "unpacked"
# Minimal optimization for faster compilation
opt-level = 0

[profile.dev-opt]
# New: Fast compile + decent runtime speed
inherits = "dev"
opt-level = 2
lto = false

# Optimize only heavy dependencies that need it
[profile.dev.package."lancedb"]
opt-level = 3
debug = false

[profile.dev.package."fastembed"]
opt-level = 3
debug = false

[profile.dev.package."arrow-array"]
opt-level = 3
debug = false

[profile.dev.package."arrow-schema"]
opt-level = 3
debug = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16

[build-dependencies]
sha2 = "0.10"
hex = "0.4"

[features]
# Enable for local/development debugging
debug-endpoint = []
