[package]
name = "mylm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "fs", "process", "sync"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls-native-roots"], default-features = false }
sysinfo = "0.30"
config = "0.14"
lancedb = "0.23"
fastembed = "5.7"
lance-arrow = "1.0"
arrow-array = "56.2"
arrow-schema = "56.2"
git2 = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"
toml = "0.8"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
urlencoding = "2.1"
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"
shell-words = "1.1"
anyhow = "1.0"
thiserror = "2.0"
dirs = "5.0"
home = "0.5"
chrono = { version = "0.4", features = ["std", "serde"] }
hostname = "0.4"
arboard = "3.4"
portable-pty = "0.8.1"
vt100 = "0.15"
dialoguer = "0.11"
console = "0.15"
crossterm = "0.28"
